@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019, 2021 Oracle and/or its affiliates.
+ * Copyright (c) 2019, 2022 Oracle and/or its affiliates.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -19,75 +19,57 @@ package io.helidon.media.common;
 import java.io.InputStream;
 import java.net.URLEncoder;
 import java.nio.charset.Charset;
-import java.nio.charset.StandardCharsets;
-import java.util.concurrent.CompletableFuture;
-import java.util.concurrent.TimeUnit;
+import java.util.concurrent.Flow.Publisher;
 
 import io.helidon.common.http.DataChunk;
-import io.helidon.common.reactive.Multi;
 
+import io.helidon.common.reactive.Single;
 import org.junit.jupiter.api.Test;
 
+import static java.nio.charset.StandardCharsets.UTF_8;
 import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.MatcherAssert.assertThat;
 
 /**
  * Unit test for {@link ContentReaders}.
  */
-@SuppressWarnings("deprecation")
 class ContentReadersTest {
+
     @Test
-    void testStringReader() throws Exception {
-        Multi<DataChunk> chunks = Multi.singleton(DataChunk.create(new byte[] {(byte) 225, (byte) 226, (byte) 227}));
-
-        CompletableFuture<? extends String> future =
-                ContentReaders.stringReader(Charset.forName("cp1250"))
-                        .apply(chunks)
-                        .toCompletableFuture();
-
-        String s = future.get(10, TimeUnit.SECONDS);
+    void testReadString() {
+        Publisher<DataChunk> chunks = chunks((byte) 225, (byte) 226, (byte) 227);
+        String s  = ContentReaders.readString(chunks, Charset.forName("cp1250")).await();
         assertThat(s, is("áâă"));
     }
 
     @Test
-    void testByteArrayReader() throws Exception {
-        String original = "Popokatepetl";
-        byte[] bytes = original.getBytes(StandardCharsets.UTF_8);
-
-        CompletableFuture<? extends byte[]> future = ContentReaders.byteArrayReader()
-                .apply(Multi.singleton(DataChunk.create(bytes)))
-                .toCompletableFuture();
-
-        byte[] actualBytes = future.get(10, TimeUnit.SECONDS);
+    void testReadBytes() {
+        byte[] bytes = "Popokatepetl".getBytes(UTF_8);
+        byte[] actualBytes = ContentReaders.readBytes(chunks(bytes)).await();
         assertThat(actualBytes, is(bytes));
     }
 
     @Test
-    void test() throws Exception {
-        String original = "Popokatepetl";
-        byte[] bytes = original.getBytes(StandardCharsets.UTF_8);
-
-        CompletableFuture<? extends InputStream> future = ContentReaders.inputStreamReader()
-                .apply(Multi.singleton(DataChunk.create(bytes)))
-                .toCompletableFuture();
-
-        InputStream inputStream = future.get(10, TimeUnit.SECONDS);
+    void testReadInputStream() throws Exception {
+        byte[] bytes = "Popokatepetl".getBytes(UTF_8);
+        InputStream inputStream = ContentReaders.readInputStream(chunks(bytes));
         byte[] actualBytes = inputStream.readAllBytes();
         assertThat(actualBytes, is(bytes));
     }
 
     @Test
-    void testURLDecodingReader() throws Exception {
+    void testreadURLEncodedString() {
         String original = "myParam=\"Now@is'the/time";
-        String encoded = URLEncoder.encode(original, "UTF-8");
-        Multi<DataChunk> chunks = Multi.singleton(DataChunk.create(encoded.getBytes(StandardCharsets.UTF_8)));
-
-        CompletableFuture<? extends String> future =
-                ContentReaders.urlEncodedStringReader(StandardCharsets.UTF_8)
-                        .apply(chunks)
-                        .toCompletableFuture();
-
-        String s = future.get(10, TimeUnit.SECONDS);
+        String encoded = URLEncoder.encode(original, UTF_8);
+        String s = ContentReaders.readURLEncodedString(chunks(encoded), UTF_8).await();
         assertThat(s, is(original));
+    }
+
+    private static Publisher<DataChunk> chunks(byte... bytes) {
+        return Single.just(DataChunk.create(bytes));
+    }
+
+    private static Publisher<DataChunk> chunks(String s) {
+        return chunks(s.getBytes(UTF_8));
     }
 }
